--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -4,8 +4,6 @@
 }
 footer {
   width: 100%;
-}
-footer {
   margin-top: 5%;
   margin-left: 1%;
   margin-right: 1%;
@@ -16,5 +14,5 @@ footer {
   text-align: center;
 }
 .linksection {
-  margin-left: 50%;
+  margin-left: 45%;
 }
