--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -13,10 +13,25 @@ body {
   transform: scale(1.5);
 }
 .photos {
-  width: 75%;
+  width: 100%;
   margin: auto;
   align-items: center;
 }
 .image {
-  padding: 2%;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+html {
+  width: 100;
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  gap: 40px;
+}
+img {
+  height: 90%;
+  width: 65%;
 }
